--- a/arch/arm64/configs/lineageos_tomato_defconfig
+++ b/arch/arm64/configs/lineageos_tomato_defconfig
@@ -30,8 +30,8 @@ CONFIG_EMBEDDED=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
-#CONFIG_MODULES=y
-#CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULES=y
+CONFIG_MODULE_UNLOAD=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
@@ -555,7 +555,7 @@ CONFIG_ONESHOT_SYNC=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS=y
-CONFIG_PRONTO_WLAN=y
+CONFIG_PRONTO_WLAN=m
 CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
